--- a/smsm/WebRoot/resources/scss/theme/_home.scss
+++ b/smsm/WebRoot/resources/scss/theme/_home.scss
@@ -194,7 +194,7 @@
 //--------- End About Area -------------//
 //--------- Start Courses Area -------------//
 .courses-area {
-    background: $primary-color3;
+    margin: 10px;
     .courses-right {
         background: $white;
         padding: 40px;
