--- a/smsm/WebRoot/resources/css/main.css
+++ b/smsm/WebRoot/resources/css/main.css
@@ -617,10 +617,10 @@ td, th {
   margin-right: 0; }
 
 .section-gap {
-  padding: 150px 0; }
+  padding: 0px; }
   @media (max-width: 991px) {
     .section-gap {
-      padding: 80px 0; } }
+      padding: 0px; } }
 
 .section-title {
   padding-bottom: 80px; }
@@ -1954,13 +1954,13 @@ body.mobile-nav-active #mobile-nav-toggle {
   background: #f1f9ff; }
   .courses-area .courses-right {
     background: #fff;
-    padding: 40px; }
+    padding: 0px; }
     @media (max-width: 1024px) {
       .courses-area .courses-right {
-        padding: 40px 20px; } }
+        padding: 0px; } }
     @media (max-width: 991px) {
       .courses-area .courses-right {
-        margin-top: 60px; } }
+        margin-top: 20px; } }
 
 .courses-list li {
   background: #f7fafc;
